--- a/practica-examen/styles.css
+++ b/practica-examen/styles.css
@@ -1,15 +1,87 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  
+}
+
 .grid-container {
   display: grid;
   grid-template-areas:
     "header header header"
     "banner main aside"
     "footer footer footer";
-  grid-template-columns: 150px 1fr 220px;
-  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 1fr 5Fr 1fr;
   min-height: 100vh;
 }
-header { grid-area: header; }
-.banner { grid-area: banner; }
+
+.aside {
+  grid-area: aside;
+  background-color: blue;
+}
+
+.banner {
+  grid-area: banner;
+  background-color:gold;
+}
+
+header { 
+  grid-area: header; 
+  background-color:coral;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1.3rem;
+  }
+
+h2 {
+  text-align: center;
+  margin: 2rem;
+}
+
+nav ul{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: white;
+  margin: 0.5rem;
+  border-radius: 4px;
+  text-align: center;
+  list-style: none;
+
+}
+
+ul li {
+  margin: 20px;
+  background-color: black;
+  padding: 0.5rem;
+  border-radius: 4px;
+}
+
+figure {
+  text-align: center;
+}
+
+.cosa2 {
+  display: flex;
+  align-items: center ;
+}
+
+.cosa2 img{
+  display: block;
+  width: 50%;
+  margin: 2rem;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+}
+
 main   { grid-area: main; }
-aside  { grid-area: aside; }
-footer { grid-area: footer; }
+
+footer { 
+  grid-area: footer; 
+  background-color:cornflowerblue;
+  padding: 1rem;
+  color: white;
+}
