--- a/react4/mi-app/src/pages/Home.css
+++ b/react4/mi-app/src/pages/Home.css
@@ -1,8 +1,16 @@
+*{
+  margin: 0;
+  padding:0;
+}
+
+
 /* Contenedor principal de la página home */
 .home-main {
-  padding-top: 100px;
-  padding: 100px 2rem 2rem 2rem;
-  background-color: #f5f5f5;
+  background-color: hsl(0, 0%, 96%);
+  min-height: 100vh;
+  color: #333;
+  padding-top: 50px;
+  background-color: hsl(0, 0%, 96%);
   min-height: 100vh;
   color: #333;
 }
@@ -10,7 +18,7 @@
 /* Título principal */
 .home-title {
   color: #00C890;
-  margin-bottom: 1rem;
+  margin: 2rem 2rem;
   font-size: 2rem;
   font-weight: 700;
 }
@@ -64,6 +72,67 @@
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
   transition: all 0.3s ease;
 }
+
+
+
+
+
+/* ===== Banner con video de fondo ===== */
+.banner {
+  position: relative;
+  margin:0;
+  width: 100%;
+  height: 70vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+
+}
+
+.banner-overlay {
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  color: #fff;
+  padding: 2rem;
+  border-radius: 12px;
+}
+
+.banner-title {
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  color:#5a5ad6;
+  font-family:Arial, Helvetica, sans-serif;
+}
+
+
+/* Responsive */
+@media (max-width: 768px) {
+  .banner {
+    height: 50vh;
+  }
+
+  .banner-title {
+    font-size: 1.8rem;
+  }
+
+  .banner-text {
+    font-size: 1rem;
+  }
+}
+
 
 /* Responsive design */
 @media (max-width: 768px) {
